--- a/CheckpointGroup046-Wi23.ipynb
+++ b/CheckpointGroup046-Wi23.ipynb
@@ -112,118 +112,169 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Preliminary results\n",
+    "\n",
+    "We've tried a few different configurations with the multilayer perceptron model -- varying the learning rate, the number of hidden layers, and the number of hidden nodes per layer.\n",
+    "We have not formalized this yet -- we will create tables and graphs showing the performance with these varied hyper-parameters soon.\n",
+    "For best average loss on the test set (MSE loss) we've seen a wide range of configurations achieve around 0.85, which roughly corresponds to an average hamming distance prediction\n",
+    "   error of 0.92 across our dataset. This is nowhere near an optimal solution, but it does illustrate that an MLP can learn at least some of the structure of the problem in order\n",
+    "   to predict the hamming distance between an input word and the vocabulary set. MLP might not be the right tool to get an accurate prediction. We'll have to do a more thorough and\n",
+    "   systematic hyper-parameter search with suitable error metric evaluations to tell.\n",
+    "   \n",
+    "We will soon interpret the floating-point hamming distance prediction of this model after truncation and investigate the performance of this categorical classifier using error metrics.\n",
+    "We haven't yet performed model selection. And we haven't yet tried using other supervised learning models to solve this problem.\n",
+    "\n",
+    "# Preliminary results -- Code\n",
+    "\n",
+    "In the below code, we had already used the hamming_distance, build_bk_tree, and min_hamming_distance functions to create the training and test data (from the original dictionary of English words), which is in the file output.csv"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Preliminary results\n",
-    "\n",
-    "#!pip install spotipy\n",
-    "\n",
-    "import numpy as np \n",
+    "import pybktree, string, random\n",
+    "from bktree import Tree\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "import csv\n",
     "from sklearn.model_selection import train_test_split\n",
-    "import spotipy\n",
-    "from spotipy.oauth2 import SpotifyClientCredentials\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
-    "def get_features_from_playlist(playlist_name):\n",
-    "   #create authentication/my credentials using Spotipy\n",
-    "   cid = 'f20bed5bd1e6439ab409ed55211f1f9d'\n",
-    "   secret = '27fb5f47ab8043978e797ddc884e99c3'\n",
-    "   client_credentials_manager = SpotifyClientCredentials(client_id=cid, client_secret=secret)\n",
-    "   sp = spotipy.Spotify(client_credentials_manager=client_credentials_manager)\n",
+    "WORD_LENGTH = 6\n",
     "\n",
-    "   #search for the playlist by name/can change to be by specific spotify ID\n",
-    "   sp.search()\n",
-    "   results = sp.search(q=playlist_name, type='playlist')\n",
+    "word_list = []\n",
+    "with open('frequency-alpha-alldicts.txt') as f:\n",
+    "    next(f)  # skip the first line (header)\n",
+    "    for line in f:\n",
+    "        word = line.split()[1]  # get the second column, which is the word\n",
+    "        if len(word) == WORD_LENGTH:\n",
+    "            word_list.append(word.lower())\n",
     "\n",
-    "   #pull top playist ID from the search results\n",
-    "   playlist_id = results['playlists']['items'][0]['id']\n",
+    "def hamming_distance(s1, s2):\n",
+    "    return sum(ch1 != ch2 for ch1, ch2 in zip(s1, s2))\n",
     "\n",
-    "   #get the tracks from that playlist\n",
-    "   playlist_tracks = sp.playlist_tracks(playlist_id)\n",
+    "def build_bk_tree(word_list):\n",
+    "    tree = pybktree.BKTree(hamming_distance, word_list)\n",
+    "    return tree\n",
     "\n",
-    "   #extract the track IDs from that playlist\n",
-    "   track_ids = [track['track']['id'] for track in playlist_tracks['items']]\n",
+    "def min_hamming_distance(input_word, tree):\n",
+    "    results = tree.find(input_word, 1)\n",
+    "    if results:\n",
+    "        return results[0][0]\n",
+    "    results = tree.find(input_word, 2)\n",
+    "    if results:\n",
+    "        return results[0][0]\n",
+    "    results = tree.find(input_word, 3)\n",
+    "    if results:\n",
+    "        return results[0][0]\n",
+    "    return float('inf')\n",
     "\n",
-    "   # retrieve the audio features for each track in the playlist\n",
-    "   audio_features = []\n",
-    "   for i in range(0, len(track_ids), 50):\n",
-    "      features = sp.audio_features(track_ids[i:i+50])\n",
-    "      audio_features.append(features)\n",
+    "word_tree = build_bk_tree(word_list)\n",
     "\n",
-    "   #filter out irrelevenat info from data (type, id, uri, track_href, analysis_url)\n",
-    "   filtered_audio_features = []\n",
-    "   for feature_set in audio_features:\n",
-    "      for feature in feature_set:\n",
-    "         filtered_feature = {key: value for key, value in feature.items() if key not in ['type', 'id', 'uri', 'track_href', 'analysis_url']}\n",
-    "         filtered_audio_features.append(filtered_feature)\n",
+    "# Used to build dataset of near-words (some of which will be actual words)\n",
+    "def mutate_word(word):\n",
+    "    mutation_count = random.randint(0, 3)\n",
+    "    mutated_indices = random.sample(range(len(word)), mutation_count)\n",
+    "    mutated_chars = [random.choice(string.ascii_lowercase) for _ in range(mutation_count)]\n",
+    "    mutated_word = list(word)\n",
+    "    for index, char in zip(mutated_indices, mutated_chars):\n",
+    "        mutated_word[index] = char\n",
+    "    return ''.join(mutated_word)\n",
     "\n",
-    "   data = []\n",
-    "   for feature in filtered_audio_features:\n",
-    "      data.append(list(feature.values()))\n",
+    "# X -- the input data\n",
+    "dataset_strings = []\n",
     "\n",
-    "   return data\n",
+    "# Y -- the labels\n",
+    "dataset_dists = []\n",
     "\n",
-    "client_credentials_manager = SpotifyClientCredentials(client_id='f20bed5bd1e6439ab409ed55211f1f9d', client_secret='27fb5f47ab8043978e797ddc884e99c3')\n",
+    "with open('output.csv', mode='r') as f:\n",
+    "    reader = csv.reader(f)\n",
+    "    for row in reader:\n",
+    "        dataset_strings.append(row[0])\n",
+    "        dataset_dists.append(int(row[1]))\n",
     "\n",
-    "sp = spotipy.Spotify(client_credentials_manager=client_credentials_manager)\n",
+    "data = list(zip(dataset_strings,dataset_dists))\n",
     "\n",
-    "# Search for tracks with a low popularity score\n",
-    "results = sp.search(q='year:2022', type='track', market='US', limit=50, popularity='0,30')\n",
+    "# Split data into train and test datasets\n",
+    "train_data, test_data = train_test_split(data, test_size=0.2)\n",
     "\n",
-    "# Extract track information from the search results\n",
-    "tracks = results['tracks']['items']\n",
-    "for track in tracks:\n",
-    "    print(track['name'], 'by', track['artists'][0]['name'], '- Popularity:', track['popularity'])\n",
+    "# Define the MLP model\n",
+    "class MLP(nn.Module):\n",
+    "    def __init__(self, input_size, hidden_size, output_size):\n",
+    "        super(MLP, self).__init__()\n",
+    "        self.fc1 = nn.Linear(input_size, hidden_size)\n",
+    "        #self.fc2 = nn.Linear(hidden_size, hidden_size)\n",
+    "        self.fc3 = nn.Linear(hidden_size, output_size)\n",
     "\n",
+    "    def forward(self, x):\n",
+    "        x = x.view(-1, 6*26) # Flatten the input tensor to (batch_size, 6*26)\n",
+    "        x = torch.relu(self.fc1(x))\n",
+    "        #x = torch.relu(self.fc2(x)) # Add an additional hidden layer\n",
+    "        x = self.fc3(x)\n",
+    "        return x\n",
     "\n",
-    "popular_data = np.array(get_features_from_playlist('Top Songs - Global'))\n",
-    "unpopular_data = np.array(get_features_from_playlist('Top Songs - Global'))\n",
+    "# Define hyperparameters\n",
+    "#INPUT_SIZE = 26 # Each character is one-hot encoded as a vector of length 26 (lowercase letters)\n",
+    "HIDDEN_SIZE = 1000\n",
+    "OUTPUT_SIZE = 1 # Predicting a scalar output (minimum hamming distance)\n",
+    "LEARNING_RATE = 0.00001\n",
+    "NUM_EPOCHS = 200\n",
     "\n",
-    "# create labels for the data\n",
-    "popular_labels = np.full(popular_data.shape[0], 1)\n",
-    "unpopular_labels = np.full(unpopular_data.shape[0], 0)\n",
+    "# Check if GPU is available\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(f\"Training on {device}\")\n",
     "\n",
-    "# combine the data and labels\n",
-    "X = np.concatenate((popular_data, unpopular_data))\n",
-    "y = np.concatenate((popular_labels, unpopular_labels))\n",
+    "# Prepare the data\n",
+    "def one_hot_encode(s):\n",
+    "    x = torch.zeros(len(s), 26)\n",
+    "    for i, c in enumerate(s):\n",
+    "        x[i][ord(c) - 97] = 1\n",
+    "    return x\n",
     "\n",
-    "# split the data into training and testing sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+    "train_data = [(one_hot_encode(s), d) for s, d in train_data] # One-hot encode input strings\n",
+    "train_loader = torch.utils.data.DataLoader(train_data, batch_size=2048, shuffle=True)\n",
     "\n",
-    "# create the K-nearest neighbor model with k=3\n",
-    "knn = KNeighborsClassifier(n_neighbors=3)\n",
+    "test_data = [(one_hot_encode(s), d) for s, d in test_data] # One-hot encode input strings\n",
+    "test_loader = torch.utils.data.DataLoader(test_data, batch_size=2048, shuffle=False)\n",
     "\n",
-    "# train the model on the training data\n",
-    "knn.fit(X_train, y_train)\n",
+    "# Initialize the model and optimizer\n",
+    "model = MLP(26*6, HIDDEN_SIZE, OUTPUT_SIZE).to(device)\n",
+    "optimizer = optim.Adam(model.parameters(), lr=LEARNING_RATE)\n",
     "\n",
-    "# predict the labels of the testing data\n",
-    "y_pred = knn.predict(X_test)\n",
+    "# Define the loss function (mean squared error)\n",
+    "criterion = nn.MSELoss()\n",
     "\n",
-    "# print the accuracy of the model\n",
-    "print(\"Accuracy:\", knn.score(X_test, y_test))"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Train the model\n",
+    "for epoch in range(NUM_EPOCHS):\n",
+    "    running_loss = 0.0\n",
+    "    for inputs, labels in train_loader:\n",
+    "        inputs, labels = inputs.to(device), labels.to(device)\n",
+    "        optimizer.zero_grad()\n",
+    "        outputs = model(inputs.float())\n",
+    "        loss = criterion(outputs, labels.float())\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        running_loss += loss.item()\n",
+    "    print('Epoch %d: loss=%.4f' % (epoch+1, running_loss/len(train_loader)))\n",
     "\n",
+    "# Test the model\n",
+    "total_loss = 0.0\n",
+    "with torch.no_grad():\n",
+    "   for inputs, labels in test_loader:\n",
+    "      inputs, labels = inputs.to(device), labels.to(device)\n",
+    "      outputs = model(inputs.float())\n",
+    "      loss = criterion(outputs, labels.float())\n",
+    "      total_loss += loss.item()\n",
     "\n",
-    "NEW SECTION!\n",
-    "\n",
-    "Please show any preliminary results you have managed to obtain.\n",
-    "\n",
-    "Examples would include:\n",
-    "- Analyzing the suitability of a dataset or alogrithm for prediction/solving your problem \n",
-    "- Performing feature selection or hand-designing features from the raw data. Describe the features available/created and/or show the code for selection/creation\n",
-    "- Showing the performance of a base model/hyper-parameter setting.  Solve the task with one \"default\" algorithm and characterize the performance level of that base model.\n",
-    "- Learning curves or validation curves for a particular model\n",
-    "- Tables/graphs showing the performance of different models/hyper-parameters\n",
-    "\n"
+    "avg_loss = total_loss / len(test_loader)\n",
+    "print('Average loss on test set:', avg_loss)"
    ]
   },
   {
