--- a/CheckpointGroup046-Wi23.ipynb
+++ b/CheckpointGroup046-Wi23.ipynb
@@ -306,7 +306,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Each project team member has agreed to and and is expected to: \n",
+    "Each project team member has agreed to and is expected to: \n",
     "* Attend all-team meetings\n",
     "* Remain attentive; communicate quickly and effectively\n",
     "* Do work assigned to them\n",
