--- a/CheckpointGroup046-Wi23.ipynb
+++ b/CheckpointGroup046-Wi23.ipynb
@@ -108,10 +108,11 @@
    "source": [
     "# Evaluation Metrics\n",
     "\n",
-    "Propose at least one evaluation metric that can be used to quantify the performance of both the benchmark model and the solution model. The evaluation metric(s) you propose should be appropriate given the context of the data, the problem statement, and the intended solution. Describe how the evaluation metric(s) are derived and provide an example of their mathematical representations (if applicable). Complex evaluation metrics should be clearly defined and quantifiable (can be expressed in mathematical or logical terms).\n",
+    "In order to evaluate the accuracy of our model we will split our dataset of randomly generated strings into a test and training dataset. For the test dataset, we will use tradition methods to calculate the Hamming distance for each string in the dataset. Our metric will be calculating the average error between the predicted Hamming distance and the actual value. Our model will be considered accurate if it is both able to identify the correct Hamming distance in which the souliton model has a higher F-beta score (to quantify accuracy) than the benchmark model, and it is computationally more efficient than traditional Hamming calculations on the same dataset.\n",
     "\n",
-    "In order to evaluate the accuracy of our model we will split our dataset of randomly generated strings into a test and training dataset. For the test dataset, we will use tradition methods to calculate the Hamming distance for each string in the dataset. Our metric will be calculating the average error between the predicted Hamming distance and the actual value. Our model will be considered accurate if it is both able to identify the correct Hamming distance more than 75% of the time and it is computationally more efficient than traditional Hamming calculations on the same dataset.\n",
-    "\n"
+    "F-beta score is given by (beta)^2 * (precision * sensitivity)/((((beta)^2) * precision) + sensitivity) \n",
+    "\n",
+    "More fundamentally, it is also vital to record and observe more elementary data classifiers; percision and sensitivity are to be used in the F-score. To better gauge an understanding of our Hamming distance algorithm, we also look at specificity and negative predictive value. This helps understand how well the solution model can identify and compare to the benchmark.\n"
    ]
   },
   {
