--- a/FinalProjectGroup046-Wi23.ipynb
+++ b/FinalProjectGroup046-Wi23.ipynb
@@ -169,7 +169,7 @@
     "\n",
     "### Conclusion\n",
     "\n",
-    "Reiterate your main point and in just a few sentences tell us how your results support it. Mention how this work would fit in the background/context of other work in this field if you can. Suggest directions for future work if you want to."
+    "Our project goal focused on predicting Hamming Distance with given input string and its nearest English word from the WordSet<a name = \"wordset\"></a>[<sup>[4]</sup>](#wordsetnote) dictionary. In our approach to solve for Hamming Distance, our results have shown an efficient way to caluculate Hamming Distance in a timely manner. Additionally, from further analysis in our limitations, we denote how a random tree model could not be suffeinceint in handling as many inputs as our neural network did, 25,000, considering the time. Through a innovative scope, our nural network model for caluculating Hamming Distance has appictations like polishing a more responsive autocomplete/autocorrect feature that could be used in a software's AI. The next steps to build off the calculation of Hamming Distance would be to return similar dictionary words, and not just the closest node, and then accordingly ordering the suggestions in decending Hamming Distance."
    ]
   },
   {
