--- a/FinalProjectGroup046-Wi23.ipynb
+++ b/FinalProjectGroup046-Wi23.ipynb
@@ -103,13 +103,11 @@
    "source": [
     "# Evaluation Metrics\n",
     "\n",
-    "In order to evaluate the accuracy of our model we will split our dataset of randomly generated strings into a test and training dataset. For the test dataset, we will use tradition methods to calculate the Hamming distance for each string in the dataset. Our metric will be calculating the average error between the predicted Hamming distance and the actual value. Our model will be considered accurate if it is both able to identify the correct Hamming distance in which the souliton model has a higher F-beta score (to quantify accuracy) than the benchmark model, and it is computationally more efficient than traditional Hamming calculations on the same dataset.\n",
+    "In order to evaluate the accuracy of our model we will split our dataset of randomly generated strings into a test and training dataset. For the test dataset, we will use tradition methods to calculate the Hamming distance for each string in the dataset. Our metric will be calculating the average error between the predicted Hamming distance and the actual value. Our model will be considered accurate if it is both able to identify the correct Hamming distance in which the souliton model has a higher F-β score (to quantify accuracy) than the benchmark model, and it is computationally more efficient than traditional Hamming calculations on the same dataset.\n",
     "\n",
-    "F-beta score is given by (beta)^2 * (precision * sensitivity)/((((beta)^2) * precision) + sensitivity) \n",
+    "F-β score is given by (β)^2 * (precision * sensitivity)/((((β)^2) * precision) + sensitivity) \n",
     "\n",
-    "More fundamentally, it is also vital to record and observe more elementary data classifiers; percision and sensitivity are to be used in the F-score. To better gauge an understanding of our Hamming distance algorithm, we also look at specificity and negative predictive value. This helps understand how well the solution model can identify and compare to the benchmark.\n",
-    "\n",
-    "(MATH FORMULAE)"
+    "More fundamentally, it is also vital to record and observe more elementary data classifiers; percision and sensitivity are to be used in the F-score. To better gauge an understanding of our Hamming distance algorithm, we also look at specificity and negative predictive value. This helps understand how well the solution model can identify and compare to the benchmark. Evaluation metrics directly taken from the testing and training section of the project are MSE(Mean Squared Error), classification accuracy, and runtime. We can observe and compare each of the metrics given in order to finaliz a decision to which model performs the best. In an ideal setting, the best-performing model would be able to be accurate and detect error, while being efficient in producing metrics.\n"
    ]
   },
   {
@@ -159,7 +157,7 @@
     "\n",
     "### Limitations\n",
     "\n",
-    "Are there any problems with the work?  For instance would more data change the nature of the problem? Would it be good to explore more hyperparams than you had time for?   \n",
+    "The problem we encountered in obtaining results had to do with computation limitations. As seen above in models we compare, we had to reduce the totoal amount of datapoints input for specific comparison models, like Random Forest. As a result of our computational limitation, conducting such an algorithm would take hours to completely render. Additionally, we speculate there to be libraries that might better fit our test and training sets, especially in the actions performed in our processing.\n",
     "\n",
     "### Ethics & Privacy\n",
     "\n",
