Added some results

--- a/FinalProjectGroup046-Wi23.ipynb
+++ b/FinalProjectGroup046-Wi23.ipynb
@@ -113,24 +113,26 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Results\n",
     "\n",
-    "You may have done tons of work on this. Not all of it belongs here. \n",
+    "In order to solve the proposed problem of estimating minimum Hamming distance of a large dataset of input strings, our group chose to implement a Multi-Layer Perceptron Neural Network (MLP NN). The goal of any machine learning problem is to optimize the hyperparameters that ultimately maximize both the efficiency and accuracy of the model. In the context of this problem, we chose to change the sizes of the hidden layers of our network, the learning rate, as well as the L1 factor used to penalize the weights of the model. We repeatedly performed grid search over a small spread of hyperparameters for each of those values, manually increasing and decreasing the values in order to hone in on a smaller range of potential values that optimize the network.\n",
     "\n",
-    "Reports should have a __narrative__. Once you've looked through all your results over the quarter, decide on one main point and 2-4 secondary points you want us to understand. Include the detailed code and analysis results of those points only; you should spend more time/code/plots on your main point than the others.\n",
+    "The values that we ultimately selected for our model were hidden layer sizes of (320, 230, 64), a learning rate of 0.01 and λ (L1) of 2. Using these values, our model was able complete X amount in X seconds.\n",
     "\n",
-    "If you went down any blind alleys that you later decided to not pursue, please don't abuse the TAs time by throwing in 81 lines of code and 4 plots related to something you actually abandoned.  Consider deleting things that are not important to your narrative.  If its slightly relevant to the narrative or you just want us to know you tried something, you could keep it in by summarizing the result in this report in a sentence or two, moving the actual analysis to another file in your repo, and providing us a link to that file.\n",
     "\n",
-    "### Subsection 1\n",
+    "### Other Algorithms Used\n",
     "\n",
-    "You will likely have different subsections as you go through your report. For instance you might start with an analysis of the dataset/problem and from there you might be able to draw out the kinds of algorithms that are / aren't appropriate to tackle the solution.  Or something else completely if this isn't the way your project works.\n",
+    "Other algorithms tested against this problem and the dataset was a regression algorithm, specifically the Random Forest Regression algorithm implemented in the file 'Alternate Algorithms to test MLP NN.ipynb'. A possible issue with this algorithm could come from it attempting to predict a continuous output and round it to a categorical Hamming distance, which could introduce unintended error.\n",
     "\n",
-    "### Subsection 2\n",
+    "Unfortunately, we were unable to successfully test this, as the Random Forest Regressors implemented were all extremely computationally expensive and took upwards of an hour to run on small subsets of the original data. This issue with the amount of data utilized during training can be seen in the overall higher MSE of these algorithms, even when implementing grid search and ensembles.\n",
     "\n",
-    "Another likely section is if you are doing any feature selection through cross-validation or hand-design/validation of features/transformations of the data\n",
+    "### Cross Validation\n",
+    "\n",
+    "While cross-validation is a common practive for most machine learning problems, we chose not to include it as the nature of our problem allowed us virtually limitless data. Given that, the training times of our algorithms, and the time consuming process of manually adjusting the hyperparameters while performing grid search, we concluded that it would simply be more practical to not include cross-validation.\n",
     "\n",
     "### Subsection 3\n",
     "\n",
