--- a/FinalProjectGroup046-Wi23.ipynb
+++ b/FinalProjectGroup046-Wi23.ipynb
@@ -69,19 +69,8 @@
     "\n",
     " We source the English words from the open source WordSet<a name = \"wordset\"></a>[<sup>[4]</sup>](#wordsetnote) dictionary, and we generate training data ourselves by creating random strings with alphabet characters and using brute-force search to assign each string its corresponding minimum hamming distance label, relative to the WordSet dictionary. The critical features we are looking for in the dataset are the letters in combination to form a word in the dictionary. It's then this specific compination that will be compared to the string in the test data. We may choose to generate our random strings according to a letter frequency distribution or a bigram or trigram, or otherwise by randomly mutating random dictionary word strings to produce realistic use-case examples.\n",
     " \n",
-    " Within our basic Random Forest model, the amount of data points is variable based on computation time. Our current iteration of the algorithm supports **25,000 observations** and we test variably, from 1,000 to 10,000, and upwards of 25,000 observations. The generated test set obseration size is dependent on computional ability, mkae more time to compute 25,000 observations than 1,000. An observation consists of one string with *n*-number characters (1 string of length *n*), in our code we use n = 6 to preliminarily test, yet n = 10 will be used for our solution. For our train and test dataset, we conduct one-hot encoding in order to obtain catagorical values, in this case to investigate loss er Epoch, and average loss. We manually 'mutate' words' characters to generate strings of *n* random charcters. \n",
-    " \n",
-    " \n",
-    "Detail how/where you obtained the data and cleaned it (if necessary)\n",
-    "\n",
-    "If the data cleaning process is very long (e.g., elaborate text processing) consider describing it briefly here in text, and moving the actual clearning process to another notebook in your repo (include a link here!).  The idea behind this approach: this is a report, and if you blow up the flow of the report to include a lot of code it makes it hard to read.\n",
-    "\n",
-    "Please give the following infomration for each dataset you are using\n",
-    "- link/reference to obtain it\n",
-    "- description of the size of the dataset (# of variables, # of observations)\n",
-    "- what an observation consists of\n",
-    "- what some critical variables are, how they are represented\n",
-    "- any special handling, transformations, cleaning, etc you have done should be demonstrated here!\n"
+    " Within our basic Random Forest model, the amount of data points is variable based on computation time. Our current iteration of the algorithm supports **25,000 observations** and we test variably, from 1,000 to 10,000, and upwards of 25,000 observations. The generated test set obseration size is dependent on computional ability, mkae more time to compute 25,000 observations than 1,000. An observation consists of one string with *n*-number characters (1 string of length *n*), in our code we use n = 8 to preliminarily test and n = 8 will be used for our solution. For our train and test dataset, we conduct one-hot encoding in order to obtain catagorical values, in this case to investigate loss er Epoch, and average loss. We manually 'mutate' words' characters to generate strings of *n* random charcters. \n",
+    " \n"
    ]
   },
   {
