Adding more results

--- a/FinalProjectGroup046-Wi23.ipynb
+++ b/FinalProjectGroup046-Wi23.ipynb
@@ -117,22 +117,79 @@
     "\n",
     "Unfortunately, we were unable to successfully test this, as the Random Forest Regressors implemented were all extremely computationally expensive and took upwards of an hour to run on small subsets of the original data. This issue with the amount of data utilized during training can be seen in the overall higher MSE of these algorithms, even when implementing grid search and ensembles.\n",
     "\n",
-    "### Cross Validation\n",
+    "### Multi-Layer Perceptron Neural Network\n",
     "\n",
-    "While cross-validation is a common practive for most machine learning problems, we chose not to include it as the nature of our problem allowed us virtually limitless data. Given that, the training times of our algorithms, and the time consuming process of manually adjusting the hyperparameters while performing grid search, we concluded that it would simply be more practical to not include cross-validation.\n",
+    "The model that we selected to solve our proposed machine learning problem was a Multi-Layer Perceptron Neural Network (MLP NN). MLP NNs have a wide variety of application and can be used to solve many kinds of machine learning problems including classification, regression, and complex pattern recognition that can be difficult to solve using other algorithm types. In addition to its ability to solve complex problems, in most cases it is more computationally efficient than other models. For these reasons, we chose to implement this model to calculate the Hamming distance.\n",
     "\n",
-    "### Subsection 3\n",
+    "# Explain the structure of NN and put code below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# code for NN"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adjusting Hyperparameters and Training Our Model\n",
     "\n",
-    "Probably you need to describe the base model and demonstrate its performance.  Maybe you include a learning curve to show whether you have enough data to do train/validate/test split or have to go to k-folds or LOOCV or ???\n",
+    "In order to optimize our model, we implemented a combination of manual adjustment of the hyperparameters in response to improved loss as well as grid search to iterate over multiple hyperparameters as a time. Using this iterative process, we selected specific hyperparameters and conducted a sparse grid search to identify the best hyperparameters of the 'batch'. Then, we refined the search space by centering the values of our next search around the previously discovered optimal values. We repeated this process until the loss plateaued or the hyperparameters converged.\n",
     "\n",
-    "### Subsection 4\n",
+    "While cross-validation is a common practive for most machine learning problems, we chose not to include it as the nature of our problem allowed us virtually limitless data. Given that, the training times of our algorithms, and the somewhat time consuming process of manually adjusting the hyperparameters while performing grid search, we concluded that it would simply be more practical to not include cross-validation.\n",
     "\n",
-    "Perhaps some exploration of the model selection (hyper-parameters) or algorithm selection task. Validation curves, plots showing the variability of perfromance across folds of the cross-validation, etc. If you're doing one, the outcome of the null hypothesis test or parsimony principle check to show how you are selecting the best model.\n",
+    "Examples of some of these iterative grid searches can be seen below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# First grid search options -- yielded 256,128,64,0.01,1 -- lowest loss: 0.354\n",
+    "# h1s = [128, 256]\n",
+    "# h2s = [64, 128]\n",
+    "# h3s = [32, 64]\n",
+    "# lrs = [0.01, 0.0075, 0.005]\n",
+    "# lambdas = [0.01,0.1,1,5]\n",
     "\n",
+    "# Second grid search options -- yielded 256,128,64,0.01,1 again -- lowest loss: 0.353\n",
+    "# h1s = [256]\n",
+    "# h2s = [128]\n",
+    "# h3s = [64]\n",
+    "# lrs = [0.015,0.01,0.0085]\n",
+    "# lambdas = [1]\n",
+    "\n",
+    "# Third grid search options -- yielded 256,180,64,0.01,1  -- lowest loss: 0.351\n",
+    "# h1s = [256]\n",
+    "# h2s = [128,180]\n",
+    "# h3s = [64]\n",
+    "# lrs = [0.01]\n",
+    "# lambdas = [1]\n",
+    "\n",
+    "# Fourth grid search options -- yielded 320,230,64,0.01,2  -- lowest loss: 0.348\n",
+    "h1s = [256,280,320,400]\n",
+    "h2s = [200,230,260]\n",
+    "h3s = [64]\n",
+    "lrs = [0.01]\n",
+    "lambdas = [1,2]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Subsection 5 \n",
     "\n",
-    "Maybe you do model selection again, but using a different kind of metric than before?\n",
-    "\n"
+    "Maybe you do model selection again, but using a different kind of metric than before?"
    ]
   },
   {
